--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositorios\" />
+    <Folder Include="Clases_Repositorio\" />
   </ItemGroup>
 
   <ItemGroup>
