--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Datos\Datos.csproj" />
     <ProjectReference Include="..\Entidades\Entidades.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="SeriviciosCompuestos\" />
   </ItemGroup>
 
 </Project>
