--- a/CursosTest/CursosTest.csproj
+++ b/CursosTest/CursosTest.csproj
@@ -13,6 +13,7 @@
       For more information, visit https://learn.microsoft.com/dotnet/core/testing/unit-testing-platform-integration-dotnet-test#show-failure-per-test
       -->
     <TestingPlatformShowTestsFailure>true</TestingPlatformShowTestsFailure>
+	<NoWarn>SA1600;SA1601;SA1602;SA1604;SA1503</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
